--- a/project2/pubspec.yaml
+++ b/project2/pubspec.yaml
@@ -42,7 +42,7 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/vectors/
-    - assets/icons/
-    - assets/images/
-    - assets/lottie/
+    - assets/assets/vectors/
+    - assets/assets/icons/
+    - assets/assets/images/
+    - assets/assets/lottie/
