--- a/project2/analysis_options.yaml
+++ b/project2/analysis_options.yaml
@@ -1,2 +1,5 @@
 include: package:very_good_analysis/analysis_options.yaml
 extends: package:flutter_lints/flutter.yaml
+analyzer:
+  errors:
+    public_member_api_docs: ignore
